--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UCL Draw Simulator</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="app.js"></script>
+</head>
+<body>
+    <h2>UCL Draw</h2>
+    <table>
+        <tr>
+            <th>Group 1</th>
+            <th>Group 2</th>
+        </tr>
+        <tr>
+            <td>PSV</td>
+            <td>Bayern</td>
+        </tr>
+        <tr>
+            <td>City</td>
+            <td>Real</td>
+        </tr>
+    </table>
+    <div>
+        <tr>
+            <td>
+                <img src="ball.jpg" alt="ball" style="height: 20px; width: 20px;">
+            </td>
+            <td>
+                <img src="ball.jpg" alt="ball" style="height: 20px; width: 20px;">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="ball.jpg" alt="ball" style="height: 20px; width: 20px;">
+            </td>
+            <td>
+                <img src="ball.jpg" alt="ball" style="height: 20px; width: 20px;">
+            </td>
+        </tr>
+    </div>
+    <button id="Btn" onClick="changeColour()">Submit</button>
+</body>
+</html>
